--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-# Indicar que Hibernate debe generar las tablas
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create
